# capitalforge

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3a11cbc5313a_create_portfolio_holdings_table.py  6bb8d5a9a087_create_orders_decision_logs_portfolio_.py  ebccde044638_create_strategy_and_strategy_version_.py
backend/app/: main.py
backend/app/agent/: __init__.py  conversation_state.py  conversation_store.py  file_conversation_store.py  llm_client.py  llm_service.py
backend/app/api/: agent.py  deps.py  logos.py  market.py  portfolio.py  strategies.py
backend/app/assets/: __init__.py  asset_directory.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/logos/: __init__.py  avatar_generator.py  logo_cache.py  logo_provider.py  logo_service.py  ticker_logos_provider.py
backend/app/models/: decision_log.py  order.py  portfolio_holding.py  portfolio_snapshot.py  strategy.py
backend/app/schemas/: agent.py  market.py  portfolio.py  strategy.py
backend/app/services/: portfolio_service.py  strategy_service.py  trading_cycle_service.py
backend/app/workers/: evaluation_job.py  scheduler.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_api.py  test_alpaca_broker.py  test_alpaca_market_data.py  test_explanation_service_real_llm.py  test_llm_client.py  test_strategy_api.py
backend/tests/unit/: test_backtest_engine.py  test_domain_types.py  test_draft_updater.py  test_ema.py  test_evaluation_job.py  test_rsi.py  (+18 more)
(+99 files in other folders)
