[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "alpaca-py>=0.43.5",
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
